tests/ui/transmutability/issue-110892.next.stderr
error: expected parameter name, found `,`
  --> $DIR/issue-110892.rs:29:9
   |
LL |         ,
   |         ^ expected parameter name

error: expected parameter name, found `,`
  --> $DIR/issue-110892.rs:30:9
   |
LL |         ,
   |         ^ expected parameter name

error: expected parameter name, found `,`
  --> $DIR/issue-110892.rs:31:9
   |
LL |         ,
   |         ^ expected parameter name

error: expected parameter name, found `,`
  --> $DIR/issue-110892.rs:32:9
   |
LL |         ,
   |         ^ expected parameter name

error[E0284]: type annotations needed: cannot satisfy `the constant `{ from_options(ASSUME_ALIGNMENT, ASSUME_LIFETIMES, ASSUME_SAFETY, ASSUME_VALIDITY) }` can be evaluated`
  --> $DIR/issue-110892.rs:23:13
   |
LL |             { from_options(ASSUME_ALIGNMENT, ASSUME_LIFETIMES, ASSUME_SAFETY, ASSUME_VALIDITY) }
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot satisfy `the constant `{ from_options(ASSUME_ALIGNMENT, ASSUME_LIFETIMES, ASSUME_SAFETY, ASSUME_VALIDITY) }` can be evaluated`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/issue-110892.rs:23:13
   |
LL |     pub fn is_transmutable<
   |            --------------- required by a bound in this function
...
LL |             { from_options(ASSUME_ALIGNMENT, ASSUME_LIFETIMES, ASSUME_SAFETY, ASSUME_VALIDITY) }
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `is_transmutable`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0284`.
